--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,10 @@ input, select {
     text-decoration: line-through;
     font-style: italic;
 }
+
+@media (width <= 470px) {
+
+    .todo-container {
+        max-width: 95%;
+    }
+}
