--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ input, select {
     flex: 1;
 }
 
+h5 {
+    display: none;
+}
+
 /* todo list */
 
 
@@ -175,7 +179,7 @@ input, select {
 }
 
 .confirm-exclusao {
-    width: 70%;
+    width: 75%;
     height: 5%;
     display: flex;
     align-items: center;
@@ -186,6 +190,7 @@ input, select {
     border-radius: 5px;
 
 }
+
 
 .btn{
     font-size: 0.7rem;
